Changes for version 23.3 (unreleased) - Joachim Wiedorn

  Documentations
  --------------
    - Update of lilo.conf.5 manpage with some corrections.

  Sources
  -------
    - Support for kernel images on GPT hard disks in the first 15
        partitions, otherwise set comments (src/geometry.c, src/lilo.h)

  General
  -------
    - Fix abort problem in script mkrescue. (thanks to S. R. Wright)
    - Update script liloconf to find kernel versions 3.x, too.


Changes for version 23.2 (09-Apr-2011) - Joachim Wiedorn

  Documentations
  --------------
    - Optimize documentation generation and information.
    - Reformatting mkrescue.8 manpage. (thanks to Martin E. Schauer)
    - Update of lilo.conf.5 manpage and remove of OS/2 information.

  Sources
  -------
    - Remove obsolete BIOS workaround from 2002 (src/second.S)
    - Add information about -H option.   (src/lilo.c)
    - Save errno for second command.     (src/device.c)
    - Fix missleading error message.     (src/geometry.c)
    - Remove obsolete OS/2 code.   (src/boot.c, src/temp.c)
    - Enlarge maximum number of sectors (MAX_SETUPSECS) for
        kernel setup code to 63.   (src/bootsect.S, src/lilo.h)
    - Fix for many small flaws in source code. (Many thanks to
        Solar Designer and Vasiliy Kulikov of the openwall project).

  General
  -------
    - Remove obsolete OS/2 code.   (make.vars, src/Makefile)
    - Optimize Makefile and src/Makefile for use of $(MAKE).
    - Use mktemp utility for floppy image generation in mkrescue.
        (Many thanks to Solar Designer and Vasiliy Kulikov of the 
        openwall project).
    - Add new scripts with Makefile (already used for Debian):
        * liloconfig (for creating new lilo.conf)
        * lilo-uuid-diskid (convert device names to UUID/DiskID)


Changes for version 23.1 (04-Nov-2010) - Joachim Wiedorn

  Documentations
  --------------
    - 'make clean' delete all created documentation files.
    - many small typos in manpages.